# MFAM-WebUI

./: LICENSE  README.md
http-backend-server/: CMakeLists.txt  MfamAuxFieldId.h  MfamClient.cpp  MfamClient.h  MfamDataSample.h  MfamFiducial.h  MfamMagStartupDiagnosticState.h  MfamMagStatus.h  MfamRunningMode.h  MfamSensorFaultId.h  MfamSystemFaultIds.h  MfamSystemStatus.h  OneSecondWorker.h  Settings.cpp  Settings.h  echoclient.html  echoserver.cpp  echoserver.h  main.cpp
